...

        <TextView
            android:layout_width="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/textViewPisName"
            android:layout_marginLeft="4dp"
            android:textColor="@color/blue"
            android:layout_alignBaseline="@+id/textViewEditProfilesInSchedule"
            android:layout_alignBottom="@+id/textViewEditProfilesInSchedule"
            android:layout_toEndOf="@+id/textViewEditProfilesInSchedule" />

...
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textViewEditProfilesInSchedule"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/spinnerPisDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textViewWeekName"
            android:layout_toEndOf="@+id/textViewWeekName"
            android:spinnerMode="dialog"
            android:entries="@array/entries"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:amPmTextColor="@color/blue"
            android:numbersInnerTextColor="@color/blue"
            android:numbersTextColor="@color/blue"
            android:id="@+id/timePickerPisStartTime"
            android:layout_below="@+id/textViewStartTimeEditProfileInSchedule"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewEndTimeEditProfileInSchedule"
            android:layout_width="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:amPmTextColor="@color/blue"
            android:numbersInnerTextColor="@color/blue"
            android:numbersTextColor="@color/blue"
            android:id="@+id/timePickerPisEndTime"
            android:layout_below="@+id/textViewEndTimeEditProfileInSchedule"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="192dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_below="@+id/timePickerPisEndTime"
            android:text="Update Schedule"
            android:id="@+id/buttonPisSave"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FF0000"
            android:textColor="@color/white"
            android:text="Discard Changes"
            android:layout_marginLeft="4dp"
            android:id="@+id/buttonPisDiscard"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/buttonPisSave" />

    </RelativeLayout>
</ScrollView>
