...
                android:typeface="serif" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/listViewMonday"
                android:minHeight="28dp"
                android:layout_marginBottom="3dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
...

            <ListView
                android:layout_width="match_parent"
                android:minHeight="28dp"
                android:layout_height="192dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/listViewTuesday"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

...
